# dnsdropd

./: CMakeLists.txt
cmake/: FindSetcap.cmake
examples/: CMakeLists.txt  dns_query.json  example_dns_shim.c  example_dns_sniff.c  example_dns_to_json.c  example_dnsd.c  example_dnsd_proxy.c  example_https_query.c  example_json_to_dns.c  example_json_to_dns.json  example_lzjson.c  example_resolv.conf  example_resolver.c
examples/certs/: ca-crt.pem  client-crt.pem  client-key.pem  server-crt.pem  server-key.pem
src/: CMakeLists.txt
src/ddrop/: CMakeLists.txt  common.h
src/ddrop/core/: hmap.h  log.h
src/ddrop/dns/: CMakeLists.txt  cache.c  dnsd.c  dnsd.h  json.c  json.h  rbl.c  rbl.h  resolver.c  resolver.h  shim.c  shim.h  sniff.c  sniff.h  stat.c
src/ddrop/sock/: CMakeLists.txt  socket.c  socket.h
src/ddrop/template/: CMakeLists.txt  template.c  template.h
